# MartinettoQuadrilatero

./: CMakeLists.txt  README.md  main.cpp  main_soll.cpp  main_soll_concatenato.cpp
include/: README.md  StePer_func.h  StePer_sollevatore.h
src/: StePer_func.cpp  StePer_sollevatore.cpp  guida.cpp
tests/: CMakeLists.txt  StePer_test.cpp  StePer_test_soll.cpp  catch2Main.cpp
